# wireless-data-transmission

./: CameraTest.sh  README.md  Test.ipynb  _.config.yml  camera_test.launch  openni2_device_init.py  test_vision.py
.ipynb_checkpoints/: Test-checkpoint.ipynb
Archive/: vision_server.py
Ipython test/: Publisher.ipynb  Receiver.ipynb  Test.ipynb  dep_publisher.py  publisher.py
Joule-Pre-Install/: README.md
OpenNI/: README.md
Pure-Python-Wifi-communication/: Client_test.py  README.md  kivi_test.py
PyConn/: Client_test.py  Server_test.py  astra.py  kivi_test.py  kivy_test_linux.py  openni2_device_init.py  test_vision.py  vision_server.py
ROS/: README.md  openni2_device_init.py  publisher.py  subscriber.py
RealSense/: README.md  camera.py  sample_camera_info.txt
Test/: 480_fps.csv  480_lat.csv  Untitled.ipynb  cam_view.py  dep_col_lossless.json  result_480_fps.json  rgbd_data_size.json  rgbd_jpeg_quality.json  rgbd_lossless.json  rgbd_lossy_zoom.json
Test results/: README.md
communication test/: Client_test.py
pureConn/: camera.py  client.py  imgui.ini  openni2_device_init.py  realsense_device.py  server.py  server_real.py
pyConn/: CMakeLists.txt  README.md  decompress_ros.py  openni2_device_init.py  output.txt  package.xml  publisher.py  subscriber.py
pyVideo/: openni2_device_init.py  run.py
python_ros_message/: CMakeLists.txt  package.xml
python_ros_message/include/rgbd_compress/: rgbd_compress.h
python_ros_message/launch/: test.launch
python_ros_message/msg/: Rgbd.msg
python_ros_message/src/: compress.py  decompress.py
(+220 files in other folders)
