<?xml version="1.0"?>
<package>
  <name>rgbd_compress</name>
  <version>0.0.1</version>
  <description>The rgbd_compress package</description>

  <author email="quramon@gmail.com">Yiren Qu</author>
  <maintainer email="quramon@gmail.com">Yiren Qu</maintainer>
  <license>none</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>

  <run_depend>roscpp</run_depend>
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
</package>
